fixes line spacing

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -15,7 +15,7 @@ body {
     color: var(--color-text);
     background-color: var(--color-background);
     font-family: var(--font), sans-serif;
-    line-height: 1.3;
+    line-height: 1.25;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 }
@@ -90,6 +90,7 @@ nav a:focus::after {
     font-size: var(--title-size);
     font-weight: var(--regular-weight);
     max-width: 990px;
+    margin-bottom: 0;
 }
 
 .title-emphasis {
